<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:animateLayoutChanges="true"
    android:id="@+id/session_recording"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height   ="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:id="@+id/main_layout"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/main_layout_top"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/main_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/spinner_section"
                app:layout_constraintTop_toTopOf="@+id/main_layout_top"
                android:gravity="center">

                <pl.droidsonroids.gif.GifImageView
                    android:visibility="gone"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/recording_spinner"
                    android:src="@drawable/spinner"/>

                <ImageView
                    android:visibility="gone"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/ic_check"
                    android:src="@drawable/ic_check"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:layout_constraintTop_toBottomOf="@id/spinner_section"
                android:id="@+id/status_label"
                android:text="@string/no_active_session"
                android:fontFamily="@font/roboto_mono_bold"
                android:textColor="@color/colorTextGrey"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/btn_section"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@+id/status_label">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:id="@+id/btn_start"
                    android:visibility="visible"
                    android:background="@drawable/bg_start_btn"
                    android:fontFamily="@font/roboto_mono_bold"
                    android:textColor="@color/colorBackground"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/start"/>
                <Button
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:id="@+id/btn_stop"
                    android:background="@drawable/bg_stop_btn"
                    android:fontFamily="@font/roboto_mono_bold"
                    android:textColor="@color/colorBackground"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/stop"/>
                <Button
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:id="@+id/btn_new_session"
                    android:background="@drawable/bg_new_session_btn"
                    android:fontFamily="@font/roboto_mono_bold"
                    android:textColor="@color/colorBackground"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/finish"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/btn_section"
                app:layout_constraintStart_toStartOf="@id/main_layout_top">

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_mono_bold"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:id="@+id/readings_count_text"
                    android:gravity="center_horizontal" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingTop="10dp"
            android:id="@+id/main_layout_bottom"
            app:layout_constraintTop_toBottomOf="@id/main_layout_top">
            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_mono_bold"
                android:textColor="@color/colorTextGrey"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/no_events_text"
                android:text="@string/no_events"
                app:layout_constraintTop_toTopOf="@id/main_layout_bottom"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="@id/main_layout_bottom"
                android:id="@+id/events_list"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>